# derivbase-de

./: LICENSE  derivbase-de.cabal
src/: test.hs
src/DerivBase/: German.hs
