name:                derivbase-de
version:             0.1.0.0
synopsis:            Implementation of DerivBase for German
-- description:         
homepage:            http://www.cl.uni-heidelberg.de/~zeller/res/derivbase/
license:             BSD3
license-file:        LICENSE
author:              Britta Zeller, Jan Snajder
maintainer:          jan.snajder@fer.hr
-- copyright:           
category:            NLP
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   DerivBase.German 
  -- other-modules:       
  build-depends:     base ==4.6.*,
                     derivbase ==0.1.*
  hs-source-dirs:    src

executable test
  Build-Depends:  base ==4.6.*, derivbase ==0.1.*, derivbase-de
  Main-Is:        test.hs
  Hs-Source-Dirs: src

